# chronicle-desktop

./: .gitignore  README.md
.forgejo/workflows/: release.yml
flatpak/: cargo-sources.json  core-lock.sha256  ink.chronicler.Chronicle.desktop  ink.chronicler.Chronicle.metainfo.xml  ink.chronicler.Chronicle.yml  node-sources.json
plugins-seed/chronicle.backup/: .gitignore  README.md  chronicle-plugin.json
plugins-seed/chronicle.backup/src/: index.tsx
plugins-seed/chronicle.backup/src/components/: BackupSettings.tsx
scripts/: build-flatpak.sh  check-sources-fresh.sh  gen-sources.sh  prep-payload.sh  update-core.sh
splash/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
